[package]
name = "nethelper_rest"
authors = ["mour0 <malentacchimaurizio19@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }
sanitize_html = "0.7.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "sqlite" ] }